Fixing some button alignment issues on mobile part 3

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -343,6 +343,16 @@ body {
   right: -40px;
 }
 
+/* On mobile, bring them even closer */
+@media (max-width: 768px) {
+  .custom-carousel .carousel-control-prev {
+    left: -34px; /* Adjust for mobile screens */
+  }
+
+  .custom-carousel .carousel-control-next {
+    right: -34px; /* Adjust for mobile screens */
+  }
+}
 
 .custom-carousel .carousel-control-prev-icon,
 .custom-carousel .carousel-control-next-icon {
